# waxcraft

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  README.md  README.rst  hg_cheatsheet.md  rasp_cheatsheet.md  setup.py  setup_config.sh  setup_myconfig.sh  wax.py
ai-agents/: n8n.md
bash-conf/: .bash_aliases  .dircolors  .hgrc  .inputrc  bash_aliases  bashrc  bashrc_common.sh
cheatsheets/: CodingExpertise.md  boot.md  jupyterlab.md  network_conf.md  nix_cheatsheet.md  pandas.md  python.md  rasp_cheatsheet.md  remote.md  tensorflow_install.md  tourbillon.md  zsh.md
config/: QtProject.conf  Trolltech.conf  baloofilerc  gtkrc  gtkrc-2.0  kactivitymanagerdrc  kcmshell5rc  kconf_updaterc  kdebugrc  kdeglobals  kfontinstuirc  kglobalshortcutsrc  khelpcenterrc  khotkeysrc  kickoffrc  konsolerc  kscreenlockerrc  ksmserverrc  ksplashrc  kwinrc  kwinrulesrc  mimeapps.list  monitors.xml  monitors.xml~  muondiscoverrc  plasma-org.kde.plasma.desktop-appletsrc  plasma-org.kde.plasma.mediacenter-appletsrc  plasmarc  plasmashellrc  powermanagementprofilesrc  startupconfig  startupconfigfiles  systemmonitorrc  systemsettingsrc
dotfiles/: .aliases  .bash_aliases  .conkyrc  .dircolors  .editrc  .gitconfig  .hgrc  .inputrc  .pdbrc  .pdbrc.py  .python_startup.py  .tmux.conf  .vimrc  .vimrc.before.local  .vimrc.bundles.local  .vimrc.local  .zlogin  .zsh-plugins.sh  .zsh-plugins.txt  aliases.zsh  bashrc_common.sh  bindings.zsh  common.sh  envvar.sh  macos-setup.sh  zshrc_common.sh  zshrc_common.zsh
kde-plasma-conf/: QtProject.conf  kdeglobals  kglobalshortcutsrc  khotkeysrc  kscreenlockerrc  ksmserverrc  kwinrc  plasma-org.kde.plasma.desktop-appletsrc  plasmarc  plasmashellrc
macos/: iterm2.json
nix/: CLAUDE.md  flake.nix  homebrew.nix  keymaps.nix  nix_exprs_example.nix  overlays.nix  pkgs.nix  postgres.nix  preferences.nix  system-scripts.nix
nix/nixpkgs/florence-0.6.3/florence-0.6.3/data/styles/bright/: Makefile.am  Makefile.in  default.svg.in
nix/nixpkgs/florence-0.6.3/florence-0.6.3/data/styles/default/: Makefile.am  Makefile.in  florence.style.in  symbols.xml.in.in
nix/nixpkgs/florence-0.6.3/florence-0.6.3/data/styles/default/sounds/: Makefile.in  sounds.xml
nix/nixpkgs/florence-0.6.3/florence-0.6.3/data/styles/hard/: Makefile.am  Makefile.in  default.svg.in  high.svg.in  mini.svg.in  return.svg.in  small.svg.in  space.svg.in  tiny.svg.in  wide.svg.in  xl.svg.in  xxl.svg.in
nix/nixpkgs/florence-0.6.3/florence-0.6.3/src/: Makefile.am  Makefile.in  controller.c  controller.h  florence-1.0.pc.in  florence.c  florence.h  key.c  keyboard.c  main.c  menu.c  menu.h  service.c  service.h  settings-window.c  settings.c  settings.h  status.c  status.h  style.c  trayicon.c  trayicon.h  view.c  view.h  xkeyboard.c  xkeyboard.h
nix/nixpkgs/florence-0.6.3/florence-0.6.3/src/lib/: florence.c  florence.h
nixos/: configuration.nix  hardware-configuration.nix  nixpkgs.nix  sysPkgs.nix  template_redac_package.nix  ux32ln-r4031h.nix
nvim/: init.lua  lazy-lock.json
tools/: ag-jump  ale_fixers_deps.txt  hg-jump  pnix-shell.sh  proxy.sh  setup_raspbian.sh  unset_proxy.py
vim-conf/: .vimrc.before.local  .vimrc.bundles  .vimrc.bundles.local  .vimrc.local  init.vim  (+3 more)
(+515 files in other folders)
